Quick fix back btn arrow alignment issue

--- a/style/components/buttons.sass
+++ b/style/components/buttons.sass
@@ -1,7 +1,7 @@
 .btn
     display: flex
     flex-direction: row
-    align-items: center
+    align-items: end
     padding: 0px
     cursor: pointer
     border: 1px solid rgba(255, 255, 255, 0)
@@ -12,6 +12,7 @@
         width: 1.17rem
         height: 1.17rem
         margin-right: .67rem
+        display: flex
 
     img
         width: 100%
