--- a/style/interface.css
+++ b/style/interface.css
@@ -302,9 +302,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
   padding: 0px;
   cursor: pointer;
   border: 1px solid rgba(255, 255, 255, 0);
@@ -317,6 +317,9 @@ body {
   width: 1.17rem;
   height: 1.17rem;
   margin-right: .67rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .btn img {
